Only remove PIP layer mask if it is actually the PIP layer mask.

mask applied to it.

Bug: 890706
Test: Try play store in the overview mode, it correctly has the overview
Change-Id: Ief07667a66479fbcd12b1a87c7c11778a3d9eccf
Reviewed-on: https://chromium-review.googlesource.com/c/1298519
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Eliot Courtney <edcourtney@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#602608}(cherry picked from commit 673d7704f826421603adb3c5fb8325518fa0e0ef [formerly 60a782a13a4806537be223a6bc8cee5e374caaf7])
Reviewed-on: https://chromium-review.googlesource.com/c/1307356
Reviewed-by: Eliot Courtney <edcourtney@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#385}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 8c4a1c112aa9cf73dad704d283b7217622a89bb1